fix overflow playlist e mediaquery

--- a/css/style.css
+++ b/css/style.css
@@ -211,14 +211,16 @@ li:hover {
 
 .scroll {
     overflow-y: auto;
-    height: 200px;
+    height: 40vh;
 }
 
 .fisso {
-    margin-top: 40px;
-    position: fixed;
-    bottom: 70px;
-    left: 10px;
+margin-top: 40px;
+position: relative;
+bottom: 70px;
+background-color: black;
+width: 100%;
+padding-right: 10px;
 }
 
 .bottom {
@@ -424,10 +426,13 @@ button:hover {
     .simbol-small {
         margin-left: 10px;
     }
+    .right-content {
+        text-align: left;
+    }
 }
 
 /* TABLET SMALL */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 620px) {
     .col-songs {
         width: calc(100% / 2 - 20px);
     }
@@ -438,7 +443,7 @@ button:hover {
 }
 
 /* MOBILE */
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 510px) {
     .col-500 {
         background-color: black;
         height: 580px;
